--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"><head>  
+<html lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <title>Computer Vision Class Project
-  | ECE, Virginia Tech | Fall 2015: ECE 5554/4984</title>
+  | Georgia Tech | Fall 2018: CS 4476</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
 
-<!-- Le styles -->  
+<!-- Le styles -->
   <link href="css/bootstrap.css" rel="stylesheet">
 <style>
 body {
@@ -21,7 +21,7 @@ color: #3366CC;
 color: #FF9900;
 }
 </style>
-  
+
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements --><!--[if lt IE 9]>
@@ -33,10 +33,10 @@ color: #FF9900;
 <div class="container">
 <div class="page-header">
 
-<!-- Title and Name --> 
-<h1>Your Title Here</h1> 
-<span style="font-size: 20px; line-height: 1.5em;"><strong>Your Name Here</strong></span><br>
-<span style="font-size: 18px; line-height: 1.5em;">Fall 2015 ECE 5554/4984 Computer Vision: Class Project</span><br>
+<!-- Title and Name -->
+<h1>3D Object Reconstruction</h1>
+<span style="font-size: 20px; line-height: 1.5em;"><strong>Joey Jackson, Corey Zheng, Matthew Fraschilla, Chris O'Brien</strong></span><br>
+<span style="font-size: 18px; line-height: 1.5em;">Fall 2018 CS 4478 Intro to Computer Vision: Class Project</span><br>
 <span style="font-size: 18px; line-height: 1.5em;">Virginia Tech</span>
 <hr>
 
@@ -51,7 +51,7 @@ One or two sentences on the motivation behind the problem you are solving. One o
 <h3>Teaser figure</h3>
 A figure that conveys the main idea behind the project or the main application being addressed.
 <br><br>
-<!-- Main Illustrative Figure --> 
+<!-- Main Illustrative Figure -->
 <div style="text-align: center;">
 <img style="height: 200px;" alt="" src="mainfig.png">
 </div>
@@ -73,7 +73,7 @@ Provide details about the experimental set up (number of images/videos, number o
 
 <br><br>
 
-<!-- Main Results Figure --> 
+<!-- Main Results Figure -->
 <div style="text-align: center;">
 <img style="height: 300px;" alt="" src="results.png">
 </div>
@@ -84,7 +84,7 @@ Provide details about the experimental set up (number of images/videos, number o
 Show several visual examples of inputs/outputs of your system (success cases and failures) that help us better understand your approach.
 <br><br>
 
-<!-- Main Results Figure --> 
+<!-- Main Results Figure -->
 <div style="text-align: center;">
 <img style="height: 300px;" alt="" src="qual_results.png">
 </div>
@@ -94,8 +94,8 @@ Show several visual examples of inputs/outputs of your system (success cases and
 
 
   <hr>
-  <footer> 
-  <p>© You Name Here</p>
+  <footer>
+  <p>Joey Jackson, Corey Zheng, Matthew Fraschilla, Chris O'Brien</p>
   </footer>
 </div>
 </div>
