--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ color: #FF9900;
 <h1>3D Object Reconstruction</h1>
 <span style="font-size: 20px; line-height: 1.5em;"><strong>Joey Jackson, Corey Zheng, Matthew Fraschilla, Chris O'Brien</strong></span><br>
 <span style="font-size: 18px; line-height: 1.5em;">Fall 2018 CS 4478 Intro to Computer Vision: Class Project</span><br>
-<span style="font-size: 18px; line-height: 1.5em;">Virginia Tech</span>
+<span style="font-size: 18px; line-height: 1.5em;">Georgia Tech</span>
 <hr>
 
 Please see <a href="http://vision.cs.utexas.edu/projects/adapted_attributes/">this</a> for an example of how to lay out the various details of your project. You may need to provide more details than this, beause you will not be submitting an associated paper to accompany the webpage. So the page should be self-contained
