--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@ color: #FF9900;
 
 <!-- Title and Name -->
 <h1>3D Object Reconstruction</h1>
-<span style="font-size: 20px; line-height: 1.5em;"><strong>Joey Jackson, Corey Zheng, Matthew Fraschilla, Chris O'Brien</strong></span><br>
+<span style="font-size: 20px; line-height: 1.5em;"><strong>
+Joey Jackson - ejackson61<br>
+Corey Zheng - czheng45<br>
+Matthew Fraschilla - mfraschilla3<br>
+Chris O’Brien - cobrien42
+</strong></span><br>
 <span style="font-size: 18px; line-height: 1.5em;">Fall 2018 CS 4476 Intro to Computer Vision: Class Project</span><br>
 <span style="font-size: 18px; line-height: 1.5em;">Georgia Tech</span>
 <hr>
