--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ The final step of the process was to refine the search for candidate cubes. Inst
 <table>
   <tr>
     <th></th>
-    <th>Rubix Cube</th>
+    <th>Rubik's Cube</th>
     <th>Hex Wrench Set</th>
     <th>Spray Can</th>
   </tr>
@@ -199,7 +199,7 @@ Model Dimensions (length x width x height):
         <th>Resolution 6</th>
     </tr>
     <tr>
-        <td>Rubix</td>
+        <td>Rubik's</td>
         <td>100mm x 100mm x 100mm</td>
         <td>75mm x 100mm x 75mm</td>
         <td>62mm x 75mm x 62mm</td>
@@ -209,7 +209,7 @@ Model Dimensions (length x width x height):
         <td>60mm x 59mm x 56mm</td>
     </tr>
     <tr>
-        <td>Rubix2</td>
+        <td>Rubik's Rotated</td>
         <td>100mm x 100mm x 100mm</td>
         <td>100mm x 100mm x 75mm</td>
         <td>87mm x 87mm x 62mm</td>
@@ -265,7 +265,7 @@ Accuracy of the application was determined by calculating the percent error betw
         <th>Resolution 6</th>
     </tr>
     <tr>
-        <td>Rubix</td>
+        <td>Rubik's</td>
         <td>75.44</td>
         <td>31.58</td>
         <td>8.77</td>
@@ -275,7 +275,7 @@ Accuracy of the application was determined by calculating the percent error betw
         <td>5.26</td>
     </tr>
     <tr>
-        <td>Rubix2</td>
+        <td>Rubik's Rotated</td>
         <td>23.46</td>
         <td>23.46</td>
         <td>7.41</td>
@@ -330,7 +330,7 @@ Accuracy of the application was determined by calculating the percent error betw
         <th>Resolution 6</th>
     </tr>
     <tr>
-        <td>Rubix</td>
+        <td>Rubik's</td>
         <td>75.44</td>
         <td>75.44</td>
         <td>31.58</td>
@@ -340,7 +340,7 @@ Accuracy of the application was determined by calculating the percent error betw
         <td>3.51</td>
     </tr>
     <tr>
-        <td>Rubix 2</td>
+        <td>Rubik's Rotated</td>
         <td>23.46</td>
         <td>23.46</td>
         <td>7.41</td>
@@ -395,7 +395,7 @@ Accuracy of the application was determined by calculating the percent error betw
         <th>Resolution 6</th>
     </tr>
     <tr>
-        <td>Rubix</td>
+        <td>Rubik's</td>
         <td>75.44</td>
         <td>31.58</td>
         <td>8.77</td>
@@ -405,7 +405,7 @@ Accuracy of the application was determined by calculating the percent error betw
         <td>1.75</td>
     </tr>
     <tr>
-        <td>Rubix 2</td>
+        <td>Rubik's Rotated</td>
         <td>75.44</td>
         <td>31.58</td>
         <td>8.77</td>
@@ -500,3 +500,4 @@ Automatic 3D Model Construction for Turn-Table Sequences: <a href="https://www.r
 <br><br>
 
 </body></html>
+
